# dum_pointer

./: CMakeLists.txt  README.md
src/: DumPointer.h  ReferenceCounter.h
test/: CMakeLists.txt  DumPointerTest.cc
